# Hahaha

./: .clang-format  .clang-tidy  .gitignore  .gitmodules  .pre-commit-config.yaml  ARCHITECTURE.md  CMakeLists.txt  CODING_STYLE.md  Dockerfile  README.md  format.sh  meson.build  prepare_dev.sh  test.cpp
.devcontainer/: devcontainer.json
.devcontainer/clion/: devcontainer.json
.devcontainer/default/: devcontainer.json
.devcontainer/vscode/: devcontainer.json
.devcontainer/vscode_no_gpu/: devcontainer.json
.github/workflows/: ci.yml
core/include/: Tensor.h  library.h
core/include/backend/: Device.h  DeviceComputeDispatcher.h
core/include/backend/gpu/: GpuContext.h  GpuKernel.h  GpuMemory.h
core/include/common/: Config.h  Operator.h  Res.h  definitions.h
core/include/compute/: Device.h  DeviceComputeDispatcher.h
core/include/compute/autograd/: Function.h  (+4 more)
core/include/display/: GlfwWindow.h  Visualizer.h  Window.h  window.h
core/include/math/: Tensor.h  TensorWrapper.h
core/include/ml/: Parameters.h
core/src/display/: GlfwWindow.cpp  MLVisualizer.cpp
core/src/math/: Tensor.cpp
dev/: post_build.sh
dev/clion/: README.md
doc/en/: Develop.md  DevelopRequirement.md  Task.md
doc/zh-cn/: DEVELOP.md  Develop.md  DevelopRequirement.md  Task.md
examples/: CMakeLists.txt  main.cpp  meson.build  simple_nn.cpp
examples/autograd/: autograd_basic.h  autograd_example_main.cpp  autograd_train.h  meson.build
examples/basic_usage/: CMakeLists.txt  basic_tensor_usage.cpp  basic_usage_example_main.cpp  main.cpp  meson.build  tensor_basic.h
examples/ml_basic_usage/: basic_linear_regression_train.h  meson.build  ml_basic_usage_example_main.cpp
examples/ml_visualizer/: meson.build  ml_visualizer_main.cpp  visualizer_demo.h
sample/: meson.build
sample/mnist/: README.md  download_mnist.sh
sample/mnist/include/: activation.h  dataset.h  layer.h  loss.h  network.h  optimizer.h  trainer.h
sample/mnist/src/: activation.cpp  dataset.cpp  layer.cpp  loss.cpp  main.cpp  network.cpp  optimizer.cpp  trainer.cpp
src/core/: Array.h  Error.cpp  Error.h  Res.h  Tensor.h  TensorData.h  TensorPtr.h
src/core/compute/: ActiveFn.h  AutoGrad.h  AutoGradOps.h  Variable.h
src/core/defines/: h3defs.h
src/core/ds/: AVLTree.h  Map.h  Queue.h  Set.h  Stack.h  String.cpp  String.h  Vector.h  avlTree.h  bintree.h  dqueue.h  hashmap.h  hashset.h  map.h  queue.h  rbTree.h  set.h  stack.h  strbuf.h
src/core/gpu/: CudaTensor.h  calc.cu  calc.cuh
src/core/loss/: CrossEntryptLoss.h  Loss.h  MSELoss.h
src/core/ml/: Array.h  Tensor.h  TrainStatistics.h  trainStatistics.h
src/datasets/: memory.h
src/datasets/compute/: ComputeFn.h  ComputeGraphNode.h
src/datasets/dataset/: CSVDataset.h  Dataset.h  DatasetDownloader.cpp  DatasetDownloader.h  DatasetIterator.h  MNIST.h  Sample.h
src/datasets/device/: CPUDevice.h  Device.h  GPUDevice.h
src/examples/: device_example.cpp  res_example.cpp
src/include/common/: Err.h  Error.h  Res.h  error.h
src/include/math/: Math.h
src/include/util/: Device.h  DeviceManager.h  GPUDevice.h  MemoryManager.h
src/models/: Model.h
src/models/knn/: KNN.cpp  KNN.h
src/models/layers/: ReLU.h
src/models/linear_regression/: LinearRegression.cpp  LinearRegression.h
src/models/nn/: Sequential.h
src/optimizers/: AdamOptimizer.h  Optimizer.h  SGDOptimizer.h
src/python/: pyproject.toml
src/python_interface/: pyproject.toml
src/src/: test.cpp
src/src/common/: error.cpp
src/utils/: StringStream.h  commonUtil.h  common_util.h  log.h
src/utils/algo/: StrFinder.h
src/utils/mem/: Allocator.h
src/utils/vectorize/: Vectorize.h  archDefines.h
tests/: CMakeLists.txt  googletest.wrap  main_test.cpp  meson.build
tests/archtest/: CMakeLists.txt  archtest_main.cpp
tests/archtest/basic/gpu/: BasicGPUTest.cpp  CMakeLists.txt  testDefine.cu  testDefine.cuh
tests/core/: TensorApiTest.cpp
tests/core/compute/: AutogradTest.cpp  TopoSortTest.cpp
tests/core/math/: TensorTest.cpp  TensorWrapperTest.cpp
tests/core/math/ds/: NestedDataTest.cpp  TensorDataTest.cpp  TensorShapeTest.cpp  TensorStrideTest.cpp
tests/core/ml/dataset/: DatasetTest.cpp
tests/core/ml/model/: LinearRegressionTest.cpp
tests/core/ml/optimizer/: SGDOptimizerTest.cpp
tests/core/utils/common/: HelperStructTest.cpp
tests/core/utils/log/: LoggerTest.cpp
tests/unittest/: CMakeLists.txt  unittest_main.cpp
tests/unittest/core/: ResTest.cpp  TensorTest.cpp
tests/unittest/core/compute/autodiff/: GraphTest.cpp
tests/unittest/core/ds/: AVLTreeTest.cpp  DequeTest.cpp  MapTest.cpp  RBTreeTest.cpp  SetTest.cpp  StackTest.cpp  StringTest.cpp  VectorTest.cpp
tests/unittest/core/ml/: TensorFactoryTest.cpp  TensorPtrRefMaskTest.cpp  TensorTest.cpp  TensorVarTest.cpp  VariableOpTest.cpp
tests/unittest/datasets/dataset/: CSVDatasetTest.cpp  DataLoaderTest.cpp  DatasetDownloaderTest.cpp  DatasetTest.cpp  MNISTDatasetTest.cpp
tests/unittest/hahaha/: TensorVarTest.cpp
tests/unittest/hahaha/common/ds/: StringTest.cpp  VectorTest.cpp
tests/unittest/hahaha/ml/common/: TensorTest.cpp
tests/unittest/hahaha/ml/model/linear_regression/: LinearRegressionTest.cpp
tests/unittest/hahaha/ml/util/dataset/: CSVDatasetTest.cpp  DataLoaderTest.cpp  DatasetDownloaderTest.cpp  DatasetTest.cpp
tests/unittest/hahaha/models/nn/: LinearTest.cpp
tests/unittest/hiahiahia/common/: ResTest.cpp  defines_test.cpp
tests/unittest/hiahiahia/common/ds/: StrTest.cpp  Tensor_test.cpp  VecTest.cpp
tests/unittest/hiahiahia/common/util/: VecTest.cpp  VectorizeTest.cpp
tests/unittest/hiahiahia/ml/common/: TensorTest.cpp
tests/unittest/hiahiahia/ml/model/linear_regression/: LinearRegressionTest.cpp
tests/unittest/hiahiahia/ml/util/dataset/: CSVDatasetTest.cpp  CSVLoaderTest.cpp  DataLoaderTest.cpp  DatasetDownloaderTest.cpp  DatasetTest.cpp  DatasetTypeTest.cpp  MNISTDatasetTest.cpp
tests/unittest/models/linear_regression/: LinearRegressionTest.cpp
tests/unittest/models/nn/: LinearTest.cpp  ReLUTest.cpp  SequentialTest.cpp
tests/unittest/optimizers/: SGDOptimizerTest.cpp
(+155 files in other folders)
