# examples/ml_visualizer/meson.build

ml_visualizer_example = executable('hahaha_example_ml_visualizer', 
                                   'ml_visualizer_main.cpp',
                                   include_directories: [include_dir, example_include_dir],
                                   link_with: hahaha_lib,
                                   dependencies: [])

